Introducing a simple mapper type.