@@ -11,8 +11,11 @@ import org.apache.log4j.Logger;
 
 import com.github.infovip.core.date.DefaultDateFormatter;
 import com.github.infovip.core.es.type.EntityProperty;
+import com.github.infovip.core.es.type.FormMapper;
 import com.github.infovip.core.es.type.IgnoreField;
 import com.github.infovip.core.es.type.TimestampToString;
+
+import lombok.Synchronized;
 
 /**
  * 
@@ -29,21 +32,62 @@ public class FormElement<T> implements FormData {
 	@IgnoreField
 	protected transient Logger logger = Logger.getLogger(this.getClass());
 	
-	
 	@IgnoreField
 	private static transient Logger FormElementLogger = Logger.getLogger(FormElement.class);
 
 	
 	public FormElement() { }
 
+	@Synchronized
+	private static <F,T> void mapper(F from,T to, Field[] fields) {
+		FormMapper fm;
+		
+		try {
+			for(Field f : fields ) {
+				if ( f.getAnnotation(IgnoreField.class)  != null ) continue;
+				
+				if ( (fm=f.getAnnotation(FormMapper.class)) != null ) {
+					Class<?> ftype = fm.sourceType().equals("") ? f.getType() : Class.forName(fm.sourceType());
+					Class<?> ttype = fm.targetType().equals("") ? f.getType() : Class.forName(fm.sourceType());
+					
+					String sourceName = fm.source().equals("") ? f.getName() : fm.target();
+					String targetName = fm.target().equals("") ? f.getName() : fm.target();
+					
+					Method frm = from.getClass().getMethod( "get"  + sourceName , ftype );
+					Method trm = to.getClass().getMethod("set" + targetName  , ttype );
+					
+					Object value = frm.invoke( from );
+					
+					if ( fm.expression().equals("") ) {
+						trm.invoke( to ,  frm.invoke(from ) );
+					} else {
+						value = Class.forName(fm.expression()).newInstance();
+						trm.invoke(to , value);
+					}
+				}
+			}
+		} catch (ClassNotFoundException | NoSuchMethodException | SecurityException | IllegalAccessException
+				| IllegalArgumentException | InvocationTargetException | InstantiationException e) {
+			e.printStackTrace();
+		}
+	}
+
+	@Synchronized
+	private static <F,T> void mapper(F from,T to) {
+		mapper(from, to, to.getClass().getDeclaredFields());
+	}
+	
+	
 	public FormElement(T data) {
 		this.data = data;
 		Class<?> o = data.getClass(); 
 		Field[] fields = this.getClass().getDeclaredFields();
 		try {
 			for(Field f : fields ) {
+				// skip field
 				if ( f.getAnnotation(IgnoreField.class)  != null ) continue;
 				
+				// convert timestamp to string
 				if ( f.getAnnotation(TimestampToString.class) != null ) {
 					Method s = this.getClass().getMethod("set" + StringUtils.capitalize(f.getName()) , f.getType());
 					
@@ -57,6 +101,7 @@ public class FormElement<T> implements FormData {
 					continue;
 				}
 				
+				// convert by property name
 				if ( f.getAnnotation(EntityProperty.class) != null ) {
 					Object rel = o.getMethod("get"+ StringUtils.capitalize(f.getName()) ).invoke(this.data);
 					Method s = this.getClass().getMethod("set" + StringUtils.capitalize(f.getName()) , f.getType());
@@ -66,8 +111,13 @@ public class FormElement<T> implements FormData {
 					continue;
 				}
 				
+				// try to convert by name 
 				Method s = this.getClass().getMethod("set" + StringUtils.capitalize(f.getName()) , f.getType());
 				s.invoke(this,  o.getMethod("get" + StringUtils.capitalize(f.getName())).invoke(data) );
+				
+				// use form mapper
+				mapper(data, this);
+				
 			}
 		} catch (NoSuchMethodException e) {
 			logger.error(e);
@@ -89,8 +139,11 @@ public class FormElement<T> implements FormData {
 		Class<?> o = data.getClass(); 
 		try {
 			for(Field f : fields ) {
+				
+				// skip field
 				if ( f.getAnnotation(IgnoreField.class)  != null ) continue;
 				
+				// convert timestamp to string
 				if ( f.getAnnotation(TimestampToString.class) != null ) {
 					Method s = this.getClass().getMethod("set" + StringUtils.capitalize(f.getName()) , f.getType());
 					
@@ -104,6 +157,7 @@ public class FormElement<T> implements FormData {
 					continue;
 				}
 				
+				// convert by property name
 				if ( f.getAnnotation(EntityProperty.class) != null ) {
 					Object rel = o.getMethod("get"+ StringUtils.capitalize(f.getName()) ).invoke(this.data);
 					Method s = this.getClass().getMethod("set" + StringUtils.capitalize(f.getName()) , f.getType());
@@ -113,8 +167,13 @@ public class FormElement<T> implements FormData {
 					continue;
 				}
 				
+				// try to convert by name 
 				Method s = this.getClass().getMethod("set" + StringUtils.capitalize(f.getName()) , f.getType());
 				s.invoke(this,  o.getMethod("get" + StringUtils.capitalize(f.getName())).invoke(data) );
+				
+				// use form mapper
+				mapper(data, this);
+
 			}
 		} catch (NoSuchMethodException e) {
 			logger.error(e);
@@ -138,8 +197,10 @@ public class FormElement<T> implements FormData {
 			object = (T) cons.newInstance();
 			
 			for(Field f : fields ) {
+				// skip field
 				if ( f.getAnnotation(IgnoreField.class)  != null ) continue;
 				
+				// convert timestamp to string
 				if ( f.getAnnotation(TimestampToString.class) != null ) {
 					Method s = clazz.getMethod("set" + StringUtils.capitalize(f.getName()) , f.getAnnotation(TimestampToString.class).dateType());
 					String u = (String) this.getClass().getMethod("get" + StringUtils.capitalize(f.getName())).invoke(this);
@@ -150,11 +211,16 @@ public class FormElement<T> implements FormData {
 					continue;
 				}
 
+				// convert by property name
 				if ( f.getAnnotation(EntityProperty.class) != null ) 
 					continue;
 				
+				// try to convert by name 	
 				Method s = clazz.getMethod("set" + StringUtils.capitalize(f.getName()) , f.getType());
 				s.invoke(object,  this.getClass().getMethod("get" + StringUtils.capitalize(f.getName())).invoke(this) );
+				
+				// try to convert with using formmapper
+				mapper(this, object, fields);
 			}
 			
 		} catch (NoSuchMethodException | SecurityException e) {
@@ -181,17 +247,17 @@ public class FormElement<T> implements FormData {
 	}
 	
 	public static <Y,Z>  Z convertTo(Y from, Class<Z> to) {
-		Constructor<?> cons = null;
 		Z object = null;
 		Field[] fields = to.getDeclaredFields();
 
 		try {
-			cons = to.getConstructor();
-			object = (Z) cons.newInstance();
+			object = (Z) to.getConstructor().newInstance();
 			
 			for(Field f : fields ) {
+				// skip field
 				if ( f.getAnnotation(IgnoreField.class)  != null ) continue;
 				
+				// convert timestamp to string
 				if ( f.getAnnotation(TimestampToString.class) != null ) {
 					Method s = to.getClass().getMethod("set" + StringUtils.capitalize(f.getName()) , f.getType());
 					
@@ -208,9 +274,13 @@ public class FormElement<T> implements FormData {
 				if ( f.getAnnotation(EntityProperty.class) != null ) 
 					continue;
 
-				
+				// try to convert by name 	
 				Method s = to.getMethod("set" + StringUtils.capitalize(f.getName()) , f.getType());
 				s.invoke(object, from.getClass().getMethod("get" + StringUtils.capitalize(f.getName())).invoke(from) );
+				
+				// try to convert with using formmapper
+				mapper(from, object, fields);
+
 			}
 			
 		} catch (NoSuchMethodException | SecurityException e) {
@@ -254,6 +324,10 @@ public class FormElement<T> implements FormData {
 				
 				Method s = to.getClass().getMethod("set" + StringUtils.capitalize(f.getName()) , f.getType());
 				s.invoke(to, from.getClass().getMethod("get" + StringUtils.capitalize(f.getName())).invoke(from) );
+				
+				// try to convert with using formmapper
+				mapper(from, to, fields);
+
 			}
 		} catch (NoSuchMethodException | SecurityException e) {
 			FormElementLogger.error(e);
